# MacbookMacroTDS

./: .gitignore  README.md  gui_debug.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: BUGLOG.md  FEATURES_PLAN.md  GUI_PLAN.md  PLAN.md
examples/: make_example.py
examples/pw2_fallen/: pw2_fallen.strat.json
tds_macro/: __init__.py  capture.py  cli.py  clock.py  config.py  engine.py  errors.py  frame.py  geometry.py  gui.py  hotkeys.py  input_backend.py  launcher.py  permissions.py  pngio.py  recorder.py  recovery.py  settings.py  strat.py  ui.py  visual.py  window.py
tests/: helpers.py  macfakes.py  test_adaptive_sync.py  test_blast_radius.py  test_bugfixes_recheck.py  test_bugfixes_recheck10.py  test_bugfixes_recheck11.py  test_bugfixes_recheck12.py  test_bugfixes_recheck13.py  test_bugfixes_recheck14.py  test_bugfixes_recheck15.py  test_bugfixes_recheck16.py  test_bugfixes_recheck17.py  test_bugfixes_recheck18.py  test_bugfixes_recheck19.py  test_bugfixes_recheck2.py  test_bugfixes_recheck20.py  test_bugfixes_recheck21.py  test_bugfixes_recheck22.py  test_bugfixes_recheck23.py  test_bugfixes_recheck24.py  test_bugfixes_recheck25.py  test_bugfixes_recheck26.py  test_bugfixes_recheck27.py  test_bugfixes_recheck3.py  test_bugfixes_recheck4.py  test_bugfixes_recheck5.py  test_bugfixes_recheck6.py  test_bugfixes_recheck7.py  test_bugfixes_recheck8.py  test_bugfixes_recheck9.py  test_bugfixes_round1.py  test_bugfixes_round2.py  test_bugfixes_round3.py  test_bugfixes_round4.py  test_bugfixes_round5.py  test_bugfixes_round6.py  test_cli_new.py  test_cli_play.py  test_config.py  (+16 more)
