[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tds_macro"
version = "0.1.0"
description = "Resolution-independent, visually self-correcting macro for Roblox Tower Defense Simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pynput>=1.7",
    "mss>=9.0",
    "numpy>=2.0",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "numpy>=2.0", "ruff>=0.5", "pyflakes>=3.0", "mypy>=1.0"]
cv = ["opencv-python>=4.9"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E702 (multiple statements per line via ';') is intentional for compact argparse
# setup + a few tight loops; everything else (F-undefined/unused, E4 imports, E9) enforced.
ignore = ["E702"]

[project.scripts]
tds-macro = "tds_macro.cli:main"

[tool.setuptools.packages.find]
include = ["tds_macro*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
